--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "david = friends['creators'][0]"
+    "david = friends['creators'][0]\n"
    ]
   },
   {
